@@ -1500,9 +1500,6 @@ duk_ret_t duk_rp_globalize(duk_context *ctx)
         duk_pop(ctx);\
     } else {\
         duk_pop(ctx);\
-        if(duk_get_prop_string(ctx,idx,DUK_HIDDEN_SYMBOL("lock")))\
-            lock=duk_get_pointer(ctx, -1);\
-        duk_pop(ctx);\
         if( !duk_get_prop_string(ctx,idx,DUK_HIDDEN_SYMBOL("filehandle")) )\
             RP_THROW(ctx,"error %s(): argument is not a file handle",func);\
         f=duk_get_pointer(ctx,-1);\
@@ -1874,17 +1871,10 @@ static duk_ret_t readline_next(duk_context *ctx)
         char *line = NULL;
         size_t len = 0;
         int nread;
-        pthread_mutex_t *lock_p=NULL;
-
-        if(duk_get_prop_string(ctx, -1, DUK_HIDDEN_SYMBOL("lock")))
-            lock_p=duk_get_pointer(ctx, -1);
-        duk_pop(ctx);
 
         errno = 0;
 
-        if(lock_p) RP_PTLOCK(lock_p);
         nread = getline(&line, &len, fp);
-        if(lock_p) RP_PTUNLOCK(lock_p);
 
         if (errno)
         {
@@ -1916,7 +1906,7 @@ static duk_ret_t readline_next(duk_context *ctx)
 #define RTYPE_STDIN 0
 #define RTYPE_HANDLE 1
 #define RTYPE_FILE 2
-
+#define RTYPE_FOPEN_BUFFER 3
 /* if type is not 0, check for fifo and if so, set type to fd
    if fifo also sets f to NULL
    All failures throw js exceptions
@@ -1932,6 +1922,11 @@ static duk_ret_t readline_next(duk_context *ctx)
             filename="stdin";\
             f=stdin;\
             type=RTYPE_STDIN;\
+        } else if(duk_has_prop_string(ctx, idx, DUK_HIDDEN_SYMBOL("cookie"))) {\
+            type=RTYPE_FOPEN_BUFFER;/* no locking with fopenBuffer */\
+            f=getfh(ctx, idx, fname);\
+            if(!f)\
+                RP_THROW(ctx, "%s - first argument must be a string, filehandle or rampart.utils.stdin", fname);\
         } else {\
             f=getfh(ctx, idx, fname);\
             if(!f)\
@@ -1965,21 +1960,13 @@ static duk_ret_t readline_next(duk_context *ctx)
     f;\
 })
 
-#define getreadfile_lock(ctx,idx,fname,filename,type, lock_p) ({\
-    if(duk_get_prop_string(ctx,  idx, DUK_HIDDEN_SYMBOL("lock")))\
-        lock_p=duk_get_pointer(ctx, -1);\
-    duk_pop(ctx);\
-    getreadfile(ctx,idx,fname,filename,type);\
-})
-
 duk_ret_t duk_rp_readline(duk_context *ctx)
 {
     const char *filename="";
     FILE *f;
     int type=1;
-    pthread_mutex_t *lock_p=NULL;
 
-    f=getreadfile_lock(ctx, 0, "readLine", filename, type, lock_p);
+    f=getreadfile(ctx, 0, "readLine", filename, type);
 
     duk_push_object(ctx);
 
@@ -1989,7 +1976,7 @@ duk_ret_t duk_rp_readline(duk_context *ctx)
     duk_push_pointer(ctx,f);
     duk_put_prop_string(ctx, -2, DUK_HIDDEN_SYMBOL("filepointer"));
 
-    if(f==NULL) //its a fifo
+    if(f==NULL && type!=RTYPE_FOPEN_BUFFER) //its a fifo
     {
         int to=-1;
         if(!duk_is_undefined(ctx, 1))
@@ -2004,15 +1991,11 @@ duk_ret_t duk_rp_readline(duk_context *ctx)
         duk_push_c_function(ctx,readline_next_fifo,0);
     }
     else
-    {
-        duk_push_pointer(ctx, lock_p);
-        duk_put_prop_string(ctx, -2, DUK_HIDDEN_SYMBOL("lock"));
-
         duk_push_c_function(ctx,readline_next,0);
-    }
+
     duk_put_prop_string(ctx, -2, "next");
 
-    if(type >= RTYPE_FILE)
+    if(type == RTYPE_FILE)
     {
         duk_push_c_function(ctx,duk_rp_readln_finalizer,1);
         duk_set_finalizer(ctx, -2);
@@ -4456,7 +4439,7 @@ duk_ret_t duk_rp_hll_addfile(duk_context *ctx)
 
     free(line);
 
-    if(type >= RTYPE_FILE)
+    if(type == RTYPE_FILE)
         fclose(f);
 
     duk_push_this(ctx);
@@ -5097,9 +5080,8 @@ duk_ret_t duk_rp_fread(duk_context *ctx)
     const char *filename="";
     duk_idx_t idx=1;
     int type=0, retstr=0, nonblock=0;
-    pthread_mutex_t *lock_p=NULL;
 
-    f=getreadfile_lock(ctx, 0, "fread", filename, type, lock_p);//type is reset
+    f=getreadfile(ctx, 0, "fread", filename, type);//type is reset
 
     //assume true if set
     if(duk_has_prop_string(ctx, 0, DUK_HIDDEN_SYMBOL("nonblock")) )
@@ -5131,11 +5113,7 @@ duk_ret_t duk_rp_fread(duk_context *ctx)
 
     buf=duk_push_dynamic_buffer(ctx, (duk_size_t)sz);
 
-    if(lock_p)
-    {
-        if(lock_p) RP_PTLOCK(lock_p);
-    }
-    else if(type!=RTYPE_STDIN)
+    if(type!=RTYPE_STDIN && type != RTYPE_FOPEN_BUFFER)
     {
         if (flock(fileno(f), LOCK_SH) == -1)
             RP_THROW(ctx, "error fread(): could not get read lock");
@@ -5155,11 +5133,7 @@ duk_ret_t duk_rp_fread(duk_context *ctx)
         buf = duk_resize_buffer(ctx, -1, read+sz);
     }
 
-    if(lock_p)
-    {
-        if(lock_p) RP_PTUNLOCK(lock_p);
-    }
-    else if(type!=RTYPE_STDIN)
+    if(type!=RTYPE_STDIN && type != RTYPE_FOPEN_BUFFER)
     {
         if (flock(fileno(f), LOCK_UN) == -1)
             RP_THROW(ctx, "error fread(): could not release read lock");
@@ -5171,7 +5145,7 @@ duk_ret_t duk_rp_fread(duk_context *ctx)
     if(retstr)
         duk_buffer_to_string(ctx, -1);
 
-    if(type >= RTYPE_FILE)
+    if(type == RTYPE_FILE)
         fclose(f);
 
     return (1);
@@ -5295,12 +5269,11 @@ static duk_ret_t duk_rp_fgets_getchar(duk_context *ctx, int gettype)
     const char *filename="";
     int ch, type=RTYPE_STDIN;
     char *fn = (gettype)?"getchar":"fgets";
-    pthread_mutex_t *lock_p=NULL;
 
     if(!gettype)
     {
         type=0;
-        f=getreadfile_lock(ctx, 0, fn, filename, type, lock_p);//type is reset
+        f=getreadfile(ctx, 0, fn, filename, type);//type is reset
         duk_remove(ctx,0);
     }
 
@@ -5312,11 +5285,7 @@ static duk_ret_t duk_rp_fgets_getchar(duk_context *ctx, int gettype)
     }
 
 
-    if(lock_p)
-    {
-        if(lock_p) RP_PTLOCK(lock_p);
-    }
-    else if(type!=RTYPE_STDIN)
+    if(type!=RTYPE_STDIN && type != RTYPE_FOPEN_BUFFER)
     {
         if (flock(fileno(f), LOCK_SH) == -1)
             RP_THROW(ctx, "error %s: could not get read lock", fn);
@@ -5354,11 +5323,7 @@ static duk_ret_t duk_rp_fgets_getchar(duk_context *ctx, int gettype)
         }
     }
 
-    if(lock_p)
-    {
-        if(lock_p) RP_PTUNLOCK(lock_p);
-    }
-    else if(type!=RTYPE_STDIN)
+    if(type!=RTYPE_STDIN && type != RTYPE_FOPEN_BUFFER)
     {
         if (flock(fileno(f), LOCK_UN) == -1)
         {
@@ -5367,7 +5332,7 @@ static duk_ret_t duk_rp_fgets_getchar(duk_context *ctx, int gettype)
         }
     }
 
-    if(type >= RTYPE_FILE)
+    if(type == RTYPE_FILE)
         fclose(f);
 
     duk_push_string(ctx, buf);
@@ -5395,11 +5360,15 @@ duk_ret_t duk_rp_fwrite(duk_context *ctx)
     duk_size_t bsz;
     int closefh=1;
     int append=0;
+    int nolock=0;
 
     if(duk_is_object(ctx,0))
     {
         f = getfh_nonull_lock(ctx,0,"fwrite",lock_p);
         closefh=0;
+        //no locking for fopenBuffer
+        if(duk_has_prop_string(ctx, 0, DUK_HIDDEN_SYMBOL("cookie")))
+            nolock=1;
     }
     else
     {
@@ -5435,30 +5404,34 @@ duk_ret_t duk_rp_fwrite(duk_context *ctx)
     }
     else sz=(size_t)bsz;
 
-    if(!lock_p)
+    if(!nolock)
     {
-        if (flock(fileno(f), LOCK_EX) == -1)
-            RP_THROW(ctx, "fwrite(): error - could not obtain lock");
+        if(!lock_p)
+        {
+            if (flock(fileno(f), LOCK_EX) == -1)
+                RP_THROW(ctx, "fwrite(): error - could not obtain lock");
+        }
+        else
+        {
+            if (pthread_mutex_lock(lock_p) != 0)
+                RP_THROW(ctx, "fwrite(): error - could not obtain lock");
+        }
     }
-    else
-    {
-        if (pthread_mutex_lock(lock_p) != 0)
-            RP_THROW(ctx, "fwrite(): error - could not obtain lock");
-    }
-
     wrote=fwrite(buf,1,sz,f);
 
-    if(!lock_p)
+    if(!nolock)
     {
-        if (flock(fileno(f), LOCK_UN) == -1)
-            RP_THROW(ctx, "fwrite(): error - could not release lock");
+        if(!lock_p)
+        {
+            if (!nolock && flock(fileno(f), LOCK_UN) == -1)
+                RP_THROW(ctx, "fwrite(): error - could not release lock");
+        }
+        else
+        {
+            if (pthread_mutex_unlock(lock_p) != 0)
+              RP_THROW(ctx, "fwrite(): error - could not release lock");
+        }
     }
-    else
-    {
-        if (pthread_mutex_unlock(lock_p) != 0)
-          RP_THROW(ctx, "fwrite(): error - could not release lock");
-    }
-
     if(closefh)
         fclose(f);
 
@@ -5559,11 +5532,15 @@ duk_ret_t duk_rp_fprintf(duk_context *ctx)
     int append=0;
     int closefh=1;
     pthread_mutex_t *lock_p=NULL;
+    int nolock=0;
 
     if(duk_is_object(ctx,0))
     {
-        f = getfh_nonull_lock(ctx,0,"fprintf",lock_p);
+        f = getfh_nonull_lock(ctx,0,"fwrite",lock_p);
         closefh=0;
+        //no locking for fopenBuffer
+        if(duk_has_prop_string(ctx, 0, DUK_HIDDEN_SYMBOL("cookie")))
+            nolock=1;
     }
     else
     {
@@ -5588,15 +5565,18 @@ duk_ret_t duk_rp_fprintf(duk_context *ctx)
         }
     }
 
-    if(!lock_p)
+    if(!nolock)
     {
-        if (flock(fileno(f), LOCK_EX) == -1)
-            RP_THROW(ctx, "fprintf(): error - could not obtain lock");
-    }
-    else
-    {
-        if (pthread_mutex_lock(lock_p) != 0)
-            RP_THROW(ctx, "fprintf(): error - could not obtain lock");
+        if(!lock_p)
+        {
+            if (flock(fileno(f), LOCK_EX) == -1)
+                RP_THROW(ctx, "fprintf(): error - could not obtain lock");
+        }
+        else
+        {
+            if (pthread_mutex_lock(lock_p) != 0)
+                RP_THROW(ctx, "fprintf(): error - could not obtain lock");
+        }
     }
 
     errno=0;
@@ -5605,15 +5585,18 @@ duk_ret_t duk_rp_fprintf(duk_context *ctx)
     if(errno)
         RP_THROW(ctx, "fprintf(): error - %s", strerror(errno));
 
-    if(!lock_p)
+    if(!nolock)
     {
-        if (flock(fileno(f), LOCK_UN) == -1)
-            RP_THROW(ctx, "fprintf(): error - could not release lock");
-    }
-    else
-    {
-        if (pthread_mutex_unlock(lock_p) != 0)
-          RP_THROW(ctx, "fprintf(): error - could not release lock");
+        if(!lock_p)
+        {
+            if (flock(fileno(f), LOCK_UN) == -1)
+                RP_THROW(ctx, "fprintf(): error - could not release lock");
+        }
+        else
+        {
+            if (pthread_mutex_unlock(lock_p) != 0)
+              RP_THROW(ctx, "fprintf(): error - could not release lock");
+        }
     }
 
     if(closefh)
@@ -5820,6 +5803,7 @@ duk_ret_t duk_rp_fopen(duk_context *ctx)
 
 
 typedef struct {
+    FILE *file;
     char *data;
     size_t size;
     size_t pos; // Current position in the buffer
@@ -5828,7 +5812,6 @@ typedef struct {
     duk_context *ctx;
     void *bufptr;
     void *thisptr;
-    pthread_mutex_t *lock;
 } buffer_t;
 
 #ifdef __APPLE__
@@ -5902,18 +5885,18 @@ FILE *fopencookie(void *cookie, const char *mode, cookie_io_functions_t io_funcs
 static ssize_t buffer_write(void *cookie, const char *buf, size_t size) {
     buffer_t *buffer = (buffer_t *)cookie;
     size_t needed_size;
+    duk_context *ctx = buffer->ctx;
 
-    if(buffer->lock) RP_PTLOCK(buffer->lock);
+    if((get_current_thread())->ctx != ctx)
+    {
+        funlockfile(buffer->file);
+        RP_THROW((get_current_thread())->ctx, "fopenBuffer write - cannot write to a buffer created in another thread");
+    }
 
     needed_size = ( ((buffer->pos + size) / buffer->chunk) + 1) * buffer->chunk;
 
     // Ensure the buffer is large enough to hold the new data
     if (needed_size > buffer->size) {
-        duk_context *ctx = buffer->ctx;
-        
-        if((get_current_thread())->ctx != ctx)
-            RP_THROW(ctx, "fopenBuffer - cannot (yet) resize a buffer created in another thread");
-        
         duk_push_heapptr(ctx, buffer->bufptr);
         buffer->data = duk_resize_buffer(ctx, -1, needed_size);
         //printf("resized to %d\n", (int)needed_size);
@@ -5929,16 +5912,19 @@ static ssize_t buffer_write(void *cookie, const char *buf, size_t size) {
     if( (buffer->pos + 1) > buffer->used)
         buffer->used = buffer->pos + 1;
 
-    if(buffer->lock) RP_PTUNLOCK(buffer->lock);
-
     return size;
 }
 
 static ssize_t buffer_read(void *cookie, char *buf, size_t size) {
     buffer_t *buffer = (buffer_t *)cookie;
     size_t readable;
-    
-    if(buffer->lock) RP_PTLOCK(buffer->lock);
+    duk_context *ctx = buffer->ctx;
+
+    if((get_current_thread())->ctx != ctx)
+    {
+        funlockfile(buffer->file);
+        RP_THROW((get_current_thread())->ctx, "fopenBuffer read - cannot read from a buffer created in another thread");
+    }
 
     readable = buffer->size - buffer->pos;
 
@@ -5947,8 +5933,6 @@ static ssize_t buffer_read(void *cookie, char *buf, size_t size) {
     memcpy(buf, buffer->data + buffer->pos, to_read);
     buffer->pos += to_read;
 
-    if(buffer->lock) RP_PTUNLOCK(buffer->lock);
-
     return to_read;
 }
 
@@ -5956,6 +5940,13 @@ static int buffer_seek(void *cookie, off64_t *offset, int whence)
 {
     buffer_t *buffer = (buffer_t *)cookie;
     off64_t new_pos;
+    duk_context *ctx = buffer->ctx;
+
+    if((get_current_thread())->ctx != ctx)
+    {
+        funlockfile(buffer->file);
+        RP_THROW((get_current_thread())->ctx, "fopenBuffer seek - cannot seek in a buffer created in another thread");
+    }
 
     switch (whence)
     {
@@ -5982,7 +5973,7 @@ static int buffer_seek(void *cookie, off64_t *offset, int whence)
         duk_context *ctx = buffer->ctx;
 
         if((get_current_thread())->ctx != ctx)
-            RP_THROW(ctx, "fopenBuffer - cannot (yet) resize a buffer created in another thread");
+            RP_THROW((get_current_thread())->ctx, "fopenBuffer.fseek - cannot resize a buffer created in another thread");
 
         duk_push_heapptr(ctx, buffer->bufptr);
         buffer->data = duk_resize_buffer(ctx, -1, new_pos+1);
@@ -5991,11 +5982,7 @@ static int buffer_seek(void *cookie, off64_t *offset, int whence)
         buffer->size = new_pos+1;
     }
 
-
-    if(buffer->lock) RP_PTLOCK(buffer->lock);
     buffer->pos = new_pos;
-    if(buffer->lock) RP_PTUNLOCK(buffer->lock);
-
 
     *offset = new_pos;
     return 0;
@@ -6005,21 +5992,17 @@ static int buffer_fclose(void *cookie)
 {
     buffer_t *buffer = (buffer_t *)cookie;
     duk_context *ctx = buffer->ctx;
-    pthread_mutex_t *buflock;
 
 
     if((get_current_thread())->ctx != ctx)
-        RP_THROW(ctx, "fopenBuffer - cannot (yet) close a buffer created in another thread");
-
-    if(buffer->lock) RP_PTLOCK(buffer->lock);
+    {
+        funlockfile(buffer->file);
+        RP_THROW((get_current_thread())->ctx, "fopenBuffer - cannot close a buffer created in another thread");
+    }
 
     if(buffer->thisptr) // pointer is NULL if using duk_rp_push_fopen_buffer
     {
         duk_push_heapptr(ctx, buffer->thisptr);
-        duk_get_prop_string(ctx, -1, DUK_HIDDEN_SYMBOL("lock") );
-        buflock=duk_get_pointer(ctx, -1);
-        duk_pop(ctx);
-        free(buflock);
 
         duk_push_pointer(ctx, NULL);
         duk_put_prop_string(ctx, -2, DUK_HIDDEN_SYMBOL("filehandle") );
@@ -6033,13 +6016,6 @@ static int buffer_fclose(void *cookie)
     duk_push_heapptr(ctx, buffer->bufptr);
     //printf("resized to %d\n", (int)buffer->used);
     (void)duk_resize_buffer(ctx, -1, buffer->used);
-
-    //FIXME: potential race condition
-    if(buffer->lock)
-    {
-         RP_PTUNLOCK(buffer->lock);
-        free(buffer->lock);
-    }
 
     free(buffer);
 
@@ -6072,10 +6048,10 @@ static FILE *open_memstream_buffer(buffer_t *buffer)
 // finalizer for return object from JS fopenBuffer
 static duk_ret_t fopen_buffer_finalizer(duk_context *ctx)
 {
-    printf("finalizing\n");
     buffer_t *buffer;
-    pthread_mutex_t *buflock;
 
+    if((get_current_thread())->ctx != ctx)
+        return 0;
 
     duk_get_prop_string(ctx, -1, DUK_HIDDEN_SYMBOL("cookie") );
     buffer = (buffer_t *)duk_get_pointer(ctx,-1);
@@ -6083,11 +6059,6 @@ static duk_ret_t fopen_buffer_finalizer(duk_context *ctx)
 
     if(buffer)
     {
-        duk_get_prop_string(ctx, -1, DUK_HIDDEN_SYMBOL("lock") );
-        buflock=duk_get_pointer(ctx, -1);
-        duk_pop(ctx);
-        free(buflock);
-
         duk_push_pointer(ctx, NULL);
         duk_put_prop_string(ctx, -2, DUK_HIDDEN_SYMBOL("filehandle") );
 
@@ -6109,13 +6080,9 @@ static duk_ret_t fopen_buffer_finalizer(duk_context *ctx)
 // function to push a buffer and associate a filehandle
 FILE *duk_rp_push_fopen_buffer(duk_context *ctx, size_t chunk)
 {
-    pthread_mutex_t *buflock=NULL;
     buffer_t *buffer=NULL;
 
     REMALLOC(buffer, sizeof(buffer_t));
-
-    REMALLOC(buflock, sizeof(pthread_mutex_t));
-    RP_PTINIT(buflock);
 
     buffer->data = duk_push_dynamic_buffer(ctx, chunk);
     buffer->bufptr=duk_get_heapptr(ctx, -1);
@@ -6125,29 +6092,22 @@ FILE *duk_rp_push_fopen_buffer(duk_context *ctx, size_t chunk)
     buffer->pos  = 0;
     buffer->used = 0;
     buffer->ctx  = ctx;
-    buffer->lock = buflock;
-    return open_memstream_buffer(buffer);
+    buffer->file=open_memstream_buffer(buffer);
+    return buffer->file;
 }
 
 duk_ret_t duk_rp_fopen_buffer(duk_context *ctx)
 {
 
     size_t chunk = 4096;
-    pthread_mutex_t *buflock=NULL;
     buffer_t *buffer=NULL;
-    FILE *fbuf;
 
     if(!duk_is_undefined(ctx,0))
         chunk = (size_t)REQUIRE_UINT(ctx, 0, "fopenBuffer: argument must be a positive int (chunk size)");
 
     REMALLOC(buffer, sizeof(buffer_t));
-    REMALLOC(buflock, sizeof(pthread_mutex_t));
-    RP_PTINIT(buflock);
 
     duk_push_object(ctx);
-
-    duk_push_pointer(ctx, buflock);
-    duk_put_prop_string(ctx, -2, DUK_HIDDEN_SYMBOL("lock"));
 
     duk_push_pointer(ctx, buffer);
     duk_put_prop_string(ctx, -2, DUK_HIDDEN_SYMBOL("cookie"));
@@ -6160,12 +6120,11 @@ duk_ret_t duk_rp_fopen_buffer(duk_context *ctx)
     buffer->pos  = 0;
     buffer->used = 0;
     buffer->ctx  = ctx;
-    buffer->lock=NULL; // js functions like buf.read or buf.write use DUK_HIDDEN_SYMBOL("lock")
-    fbuf = open_memstream_buffer(buffer);
+    buffer->file = open_memstream_buffer(buffer);
 
     duk_put_prop_string(ctx, -2, DUK_HIDDEN_SYMBOL("buffer"));
 
-    duk_push_pointer(ctx, fbuf);
+    duk_push_pointer(ctx, buffer->file);
     duk_put_prop_string(ctx, -2, DUK_HIDDEN_SYMBOL("filehandle"));
 
     pushffunc("fprintf",    func_fprintf,   DUK_VARARGS );
